[FIX] sap.m.ObjectHeader: has padding now, when IconTabBar has no data
BCP: 1880400634
Fixes: https://github.com/SAP/openui5/issues/2092

- when there is no data for the IconTabBar, invisible span placeholder
is drawn and the ObjectHeader div is not "the only child" anymore
therefore the css selector that adds the padding is ignored.
Now the css selector is changed to last-of-type and this fixes the issue.

--- a/src/sap.m/src/sap/m/themes/base/ObjectHeader.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectHeader.less
@@ -451,7 +451,7 @@ html:not(.sapUiMedia-Std-Phone) .sapMSplitContainer:not(.sapMSplitContainerHideM
 	padding-bottom: 0;
 }
 
-div[class*='sapMOHRBg']:only-child {
+div[class*='sapMOHRBg']:last-of-type {
 	padding-bottom: 1.5rem;
 }
 
